# Hacking-Framework-OPEN-SOURCE

./: README.md
Hacking Framework/security_platform/: README.md  main.py  pyproject.toml  requirements.txt  security_platform_dev.db
Hacking Framework/security_platform/api/: auth.py  routes_reports.py  routes_scan.py  routes_targets.py  server.py
Hacking Framework/security_platform/cli/: cli.py
Hacking Framework/security_platform/cli/commands/: report_commands.py  scan_commands.py  target_commands.py
Hacking Framework/security_platform/config/: settings.py
Hacking Framework/security_platform/core/: __init__.py  engine.py  plugin_loader.py  scheduler.py  workflow_engine.py
Hacking Framework/security_platform/dashboard/backend/: __init__.py  dashboard_api.py
Hacking Framework/security_platform/dashboard/frontend/: index.html
Hacking Framework/security_platform/database/: database.py  models.py
Hacking Framework/security_platform/database/migrations/: README.md
Hacking Framework/security_platform/docker/: Dockerfile  docker-compose.yml
Hacking Framework/security_platform/intelligence/: __init__.py  cve_intelligence.py  fingerprint_engine.py  risk_engine.py
Hacking Framework/security_platform/modules/: __init__.py  base_module.py
Hacking Framework/security_platform/modules/cloud/: __init__.py  cloud_discovery.py
Hacking Framework/security_platform/modules/discovery/: __init__.py  dns_enum.py  subdomain_discovery.py
Hacking Framework/security_platform/modules/network/: __init__.py  (+2 more)
Hacking Framework/security_platform/reports/: __init__.py  exporters.py  report_generator.py
Hacking Framework/security_platform/reports_output/: report_9c3d3faf_20260316_003621.html  report_9c3d3faf_20260316_003733.html
Hacking Framework/security_platform/workers/: __init__.py  analysis_worker.py  scan_worker.py  worker_manager.py
(+4 files in other folders)
